# Topsis-Assignment

./: README.md  app.py  input.csv  input.csv.save  output.csv  setup.cfg
src/topsis_navdeep/: topsis.py
src/topsis_navdeep_102303787.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: index.html
