[metadata]
name = topsis-navdeep-102303787
version = 0.0.5
author = Navdeep Singh
author_email = nsingh3_be23@thapar.edu
description = TOPSIS implementation using Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    topsis = topsis_navdeep.topsis:main
